# stair_rod_infill_randomizer

./: .gitignore  README.md  pyproject.toml
.kiro/specs/parallelogram-railing-shape/: design.md  requirements.md  tasks.md
.kiro/steering/: communication-preferences.md  python-standards.md
conf/: config.yaml
conf/evaluator/: criteria.yaml
conf/evaluators/: passthrough.yaml  quality.yaml
conf/generators/: random.yaml  random_v2.yaml
conf/logging/: config.yaml
conf/shapes/: parallelogram.yaml  rectangular.yaml  stair.yaml
conf/ui/: settings.yaml
src/railing_generator/: __init__.py  __main__.py  app.py
tests/: __init__.py
tests/application/: test_application_controller.py  test_application_controller_persistence.py  test_manual_edit_controller.py  test_railing_project_model.py
tests/domain/: test_anchor_point.py  test_anchor_point_cut_angles.py  test_anchor_point_finder.py  test_incomplete_infill_flow.py  test_infill_edit_operation.py  test_railing_frame.py  test_railing_infill.py  test_rod.py
tests/infrastructure/: test_dxf_exporter.py  test_logging_config.py  test_ui_settings.py
tests/presentation/: conftest.py  test_bom_integration.py  test_bom_table_widget.py  test_evaluator_parameter_widgets.py  test_generator_parameter_widget_v2_evaluator.py  test_integration_model_ui.py  test_main_window.py  test_main_window_generation.py  test_parameter_panel.py  test_progress_dialog.py  test_qtextedit_log_handler.py  test_quality_evaluator_parameter_widget.py  test_shape_parameter_widget_validation.py  test_viewport_widget.py
(+86 files in other folders)
